--- a/index.html
+++ b/index.html
@@ -72,12 +72,15 @@
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client?deps=react@18.2.0",
     "react-dom": "https://esm.sh/react-dom@18.2.0?deps=react@18.2.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/"
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
   }
 }
 </script>
 </head>
   <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-gray-100 min-h-screen">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
